crates/ruff_linter/src/rules/flake8_datetimez/snapshots/ruff_linter__rules__flake8_datetimez__tests__DTZ003_DTZ003.py.snap
---
source: crates/ruff_linter/src/rules/flake8_datetimez/mod.rs
---
DTZ003 `datetime.datetime.utcnow()` used
 --> DTZ003.py:4:1
  |
3 | # qualified
4 | datetime.datetime.utcnow()
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^
5 |
6 | from datetime import datetime
help: Use `datetime.datetime.now(tz=...)` instead

DTZ003 `datetime.datetime.utcnow()` used
  --> DTZ003.py:9:1
 8 | # unqualified
 9 | datetime.utcnow()
   | ^^^^^^^^^^^^^^^^^
10 |
11 | # uses `astimezone` method
help: Use `datetime.datetime.now(tz=...)` instead
