crates/ruff_linter/src/rules/flake8_datetimez/snapshots/ruff_linter__rules__flake8_datetimez__tests__DTZ004_DTZ004.py.snap
---
source: crates/ruff_linter/src/rules/flake8_datetimez/mod.rs
---
DTZ004 `datetime.datetime.utcfromtimestamp()` used
 --> DTZ004.py:4:1
  |
3 | # qualified
4 | datetime.datetime.utcfromtimestamp(1234)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
5 |
6 | from datetime import datetime
help: Use `datetime.datetime.fromtimestamp(ts, tz=...)` instead

DTZ004 `datetime.datetime.utcfromtimestamp()` used
  --> DTZ004.py:9:1
 8 | # unqualified
 9 | datetime.utcfromtimestamp(1234)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
10 |
11 | # uses `astimezone` method
help: Use `datetime.datetime.fromtimestamp(ts, tz=...)` instead
